--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,8 +26,9 @@ dependencies {
 
     implementation 'com.google.android.material:material:1.0.0-rc01'
 
-    implementation 'com.github.bumptech.glide:glide:4.9.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+    implementation 'com.github.bumptech.glide:glide:3.8.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'de.hdodenhof:circleimageview:3.0.0'
 
     //retrofit, gson
     implementation 'com.squareup.retrofit2:converter-scalars:2.1.0'
