News Apis Implemented, RecyclerViews Populated

--- a/gradle.properties
+++ b/gradle.properties
@@ -18,3 +18,6 @@ android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
 
+NewsApiKey="51b882b292374f1d834b6c5677ea7568"
+
+
