--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,11 +12,19 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
+        debug {
+            buildConfigField 'String', "ApiKey", NewsApiKey
+            resValue 'string', "api_key", NewsApiKey
+        }
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            buildConfigField 'String', "ApiKey", NewsApiKey
+            resValue 'string', "api_key", NewsApiKey
         }
     }
+
+
 }
 
 dependencies {
